# pybind-and-cereal

./: .clang-format  CMakeLists.txt  LICENSE  LINKS  README.md  TODO  archive.xml  cereal.h  do_test_pybind.py  macros.cpp  reflect-macros.h  test-cereal.cpp  test-w-macros.cpp  test_mangle_TMP.cpp  test_pybind.cpp  test_serialization.cpp  test_serialization.h  test_types.h  util-macros.h
abandoned/: test_iterate_fields.cpp  test_join_va_args.cpp  test_mangle.cpp  test_mangle_TMP.cpp  test_misc.cpp
aux/: CMakeLists.txt  py_mangle.cpp
cmake/: __init__.py.in  python_bindings.cmake
reflect-lib/: CMakeLists.txt  aux-types.h  cereal-impl.h  cereal.h  pybind.h  reflect-macros.h  remangle.cpp  remangle.h  smart_ptr.h  stl-bind.h  type-converters.h  util-macros.h  util.h
test/: CMakeLists.txt  test_types.h
test/python/: CMakeLists.txt  bindings.cpp  do_test_pybind.py  test_Derived1.py  test_copyable.py  test_cross_module_inheritance.py  test_derive_in_python.py  test_method_args_returns.py  test_misc.py  test_moveonly.py  test_non_default_ctor.py  test_pickle.py  test_pybind.cpp  test_smart_ptr.py  test_split_bindings.py  test_unique_ptr.py  test_vector.py  types_one.cpp
test/python/bindings/: CMakeLists.txt  REFLECT_LIB_INTERNAL_AUX.cpp  aux.cpp
test/python/bindings/aux_bindings/: CMakeLists.txt  aux_bindings.cpp
test/python/bindings/pickle_types/: CMakeLists.txt  pickle_types.cpp
test/python/bindings/test_unique_ptr/: CMakeLists.txt  test_unique_ptr.cpp
test/python/bindings/types_one/: CMakeLists.txt  tst.cpp  tst_ref.cpp  tst_vec.cpp  types_one.cpp
test/python/bindings/types_one/types_one_a/: CMakeLists.txt  types_one_a.cpp
test/python/bindings/types_one/types_one_a/types_one_a_a/: CMakeLists.txt  part1.cpp  part1.h  part2.cpp  part2.h  types_one_a_a.cpp
test/python/bindings/types_one/types_one_b/: CMakeLists.txt  types_one_b.cpp
test/python/bindings/types_one/types_one_c/: CMakeLists.txt  types_one_c.cpp
test/python/misc_tests/: test_pickle_vector.py
test/serialization/: CMakeLists.txt  serialization_types1.h  serialization_types2.h  test_iterate_fields.cpp  test_load.cpp  test_save.cpp  test_save_load.sh  test_serialization.h
test/types/: test_types.h
test/types/aux_bindings/: tuple.h
test/types/pickle_types/: pickle_types.h
test/types/test_unique_ptr/: test_rvalue_refs.h  test_unique_ptr.h
test/types/types_one/: types_one.h
test/types/types_one/types_one_a/: types_one_a.h
test/types/types_one/types_one_a/types_one_a_a/: types_one_a_a.h
test/types/types_one/types_one_b/: types_one_b.h
test/types/types_one/types_one_c/: types_one_c.h
